# local-apt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  install.bash
.github/: copilot-instructions.md
.github/workflows/: release.yml  rust.yml  tag-release.yml
conf/: apt.conf  tree.conf
debian/: changelog  conffiles  control  copyright  local-apt.dirs  local-apt.install  local-apt.lintian-overrides  local-apt.manpages  local-apt.service  local-apt.timer  manpages  postinst  rules
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  RELEASE.md
install/: packages.toml
install/man/: local-apt.8  local-apt.8.md  packages.toml.5.md  packages.txt.5.md
man/: local-apt.8  update-discord-repo.8  update-local-repo.8  update-packages.8
root/usr/local/mydebs/conf/: generate.conf
src/: cli.rs  lib.rs  local.sources  main.rs
src/cli/: cleanup.rs  mod.rs  update.rs
src/conf/: apt.conf  generate.conf  packages.conf  tree.conf
src/paths/: config_file.rs  lock_file.rs  mod.rs  pool_dir.rs  state_dir.rs
