[package]
name = "local-apt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "update-packages"
path = "src/bin/update-packages.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
anyhow = "1.0"
tempfile = "3.8"
syslog = "6.1"
log = "0.4"
fs2 = "0.4"
