[package]
name = "local-apt"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
] }
fs2 = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
syslog-tracing = "0.3.1"
