[package]
name = "local-apt"
version = "1.5.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
anyhow = "1.0"
httpdate = "1"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
] }
fs2 = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
syslog-tracing = "0.3.1"
